syntax = "proto3";

option go_package = "./pb";

service BloggingService {
    rpc Create(CreateParams) returns (CreateResult) {}
    rpc Read(ReadParams) returns (ReadResult) {}
    rpc Update(UpdateParams) returns (UpdateResult) {}
    rpc Delete(DeleteParams) returns (DeleteResult) {}
}

message CreateParams {
    string Title = 1;
    string Content = 2;
    string Author = 3;
    string PublicationDate = 4;
    repeated string Tags = 5;
}

message CreateResult {
    int32 PostID = 1;
    string Error = 2;
}

message ReadParams {
    int32 PostID = 1;
}

message ReadResult {
    int32 PostID = 1;
    string Title = 2;
    string Content = 3;
    string Author = 4;
    string PublicationDate = 5;
    repeated string Tags = 6;

    string Error = 7;
}

message UpdateParams {
    int32 PostID = 1;
    string Title = 2;
    string Content = 3;
    string Author = 4;
    string PublicationDate = 5;
    repeated string Tags = 6;
}

message UpdateResult {
    int32 PostID = 1;
    string Title = 2;
    string Content = 3;
    string Author = 4;
    string PublicationDate = 5;
    repeated string Tags = 6;

    string Error = 7;
}

message DeleteParams {
    int32 PostID = 1;
}

message DeleteResult {
    string Error = 1;
}